# fromit

./: Cargo.toml  README.md
examples/: fromit.rs
src/: field.rs  from.rs  getter.rs  into.rs  lib.rs  parser.rs  setter.rs  structure.rs
